# minimagic

./: .gitignore  README.md  debug.py  pyproject.toml
minimagic/: __init__.py  cudnn_check.py
tests/: test_general.py
