[tool.poetry]
name = "minimagic"
version = "0.1.0"
description = ""
authors = ["Gabor Takacs <takacsg84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
